--- a/css/main.css
+++ b/css/main.css
@@ -1269,7 +1269,7 @@ ul.nav > li > a.active{
 ===================*/
 .hero-section.hero-4{
     background-color: transparent;
-    background-image: linear-gradient(-134deg, #c86dd7 0%, #3023ae 100%);
+    background-image: linear-gradient(-134deg, #FFC26F 0%, #C38154 100%);
     position: relative;
     height: 650px;
     display: flex;
@@ -1303,7 +1303,7 @@ ul.nav > li > a.active{
     opacity: 0.8;
 }
 .hero-moc{
-    background-image: url(../img/mobile-1.webp);
+    background-image: url(../img/app.png);
     position: absolute;
     background-repeat: no-repeat;
     background-position: right bottom;
