--- a/css/main.css
+++ b/css/main.css
@@ -205,7 +205,7 @@ button{
 
 .bg-white{ background-color: #fff; }
 .bg-grey{ background-color: #f6f7ff;}
-.bg-dark{ background-color: #151948!important;}
+.bg-dark{ background-color: #FFC26F!important;}
 .bd-top{ border-top: 2px solid #eee;}
 .bd-bottom{ border-bottom: 2px solid #eee;}
 
@@ -711,7 +711,7 @@ a,a:hover, .overlay, img, .form-control,  .form-control:hover, button{
    Header Section
    ========================================================================== */
 .header-section{
-    background-color: #F9E0BB;
+    background-color: #FFC26F;
     width: 100%;
     height: 80px;
     z-index: 99;
@@ -1146,15 +1146,15 @@ ul.nav > li > a.active{
     z-index: 1;
 }
 .hero-bg-shape{
-    background-image: url(../img/hero-bg.png);
+    background-image: url(../img/hero-bg2.png);
     background-repeat: no-repeat;
     background-position: right top;
     background-size: contain;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 101%;
     right: 0;
-    top: 0;
+    top: -1;
     z-index: -1;
 }
 .hero-content{}
