--- a/css/main.css
+++ b/css/main.css
@@ -286,7 +286,7 @@ button{
 }
 
 .site-preloader-wrap .spinner {
-    background-color: #884A39;
+    background-color: #FFC26F;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -332,7 +332,7 @@ button{
     margin-bottom: 15px;
 }
 .default-btn{
-    background-color: #00c99c;
+    background-color: #C38154;
     text-transform: uppercase;
     font-family: "Work Sans",sans-serif;
     color: #fff;
@@ -343,11 +343,11 @@ button{
     display: inline-block;
     letter-spacing: 0.5px;
     padding: 0 40px;
-    -webkit-box-shadow: 0 3px 10px rgba(0, 201, 156, 0.5);
-    box-shadow: 0 3px 10px rgba(0, 201, 156, 0.5);
+    -webkit-box-shadow: 0 3px 10px rgba(247, 171, 32, 0.5);
+    box-shadow: 0 3px 10px rgba(247, 171, 32, 0.5);
 }
 .default-btn:hover{
-    background-color: #00c99c;
+    background-color: #FFC26F;
     color: #fff;
     box-shadow: none;
     transition: all .3s ease-in-out;
@@ -735,7 +735,7 @@ a,a:hover, .overlay, img, .form-control,  .form-control:hover, button{
 .navbar-fixed-top ul.nav > li > a:hover,
 .navbar-fixed-top ul.nav > li > a:focus,
 .navbar-fixed-top ul.nav > li.active > a{
-    color: #263b5e;
+    color: #3D0C11;
 }
 .logo-light,
 .navbar-fixed-top .logo-light,
@@ -792,13 +792,13 @@ ul.nav > li{
     position: relative;
 }
 ul.nav > li > a{
-    color: #263b5e;
-    font-family: 'Work Sans', sans-serif;
+    color: #FAF2D3;
+    font-family: 'Poppins', sans-serif;
     display: inline-block;
     vertical-align: middle;
     padding: 0 20px;
     letter-spacing: 0;
-    font-size: 12px;
+    font-size: 15px;
     font-weight: 600;
     text-transform: uppercase;
     line-height: 80px;
